--- a/All_classes_together.ipynb
+++ b/All_classes_together.ipynb
@@ -57,8 +57,8 @@
     "        self.output=np.dot(inputs,self.weights)+self.biases ### formula: np.dot(X.W)+B\n",
     "    ## backward pass\n",
     "    def backward(self,dvalues):\n",
-    "        # gardient on parameter\n",
-    "        self.dweights=np.dot(self.inputs.T,dvalues)  ###Rafer to the formulas in the notes\n",
+    "        # gradient on parameter\n",
+    "        self.dweights=np.dot(self.inputs.T,dvalues)  ###Refer to the formulas in the notes\n",
     "        self.dbiases=np.sum(dvalues,axis=0,keepdims=True)\n",
     "        self.dinputs=np.dot(dvalues,self.weights.T)\n",
     "\n",
